--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -549,7 +549,7 @@
 var username = localStorage.getItem('username');
 var usernamehere = document.getElementByID("usernamehere");
 usernamehere.innerHTML = ""
-username_add.innerHTML += localStorage.getItem('username');
+usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
 </script>
 
