--- a/src/source/views/orders.html
+++ b/src/source/views/orders.html
@@ -639,7 +639,7 @@ document.getElementById("inventory").addEventListener("click", () => {
 var username = localStorage.getItem('username');
 var usernamehere = document.getElementByID("usernamehere");
 usernamehere.innerHTML = ""
-username_add.innerHTML += localStorage.getItem('username');
+usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
 </script>
 
