--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -556,7 +556,7 @@
 var username = localStorage.getItem('username');
 var usernamehere = document.getElementByID("usernamehere");
 usernamehere.innerHTML = ""
-username_add.innerHTML += localStorage.getItem('username');
+usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
 </script>
 
