--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -233,8 +233,7 @@
     <div class="profileContent" id="profilePopup">
     <span class="arrow"></span>
     <img src="../public/images/mini.png" alt="cookies-img" />
-    <p><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br id='usernamehere'><br></p> 
-    <button class="accept">Log out</button>
+    <p id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br></p>
     </div>
 </div>  
 
