added username to the profile

--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -332,8 +332,7 @@
   <div class="profileContent2" id="profilePopup">
   <span class="arrow"></span>
   <img src="../public/images/mini.png" alt="cookies-img" />
-  <p id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>
-  <button class="accept">Log out</button>
+    <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>  <button class="accept">Log out</button>
   </div>
 </div>  
 
