--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -135,7 +135,8 @@
 
       <div class="row notifications">
       <div class="col-12" id="getnoti">
-          
+
+      </div>
       </div>
       <div class="col-5 mark-as-read text-end">
           <a href="#" id="markAllAsRead" class="mark-as-read-button align-middle">Mark all as read</a>
