Update orders.html clear noti

--- a/src/source/views/orders.html
+++ b/src/source/views/orders.html
@@ -253,82 +253,9 @@
 
 
         <div class="row notifications">
-        <div class="col-12">
+        <div class="col-12" id="getnoti">
 
-            <div class="row single-notification-box unread">
-            <div class="col-11 notification-text">
-                <p>
-                <a href="#" class="link name">FRG-123-LG-2</a>
-                <span class="description">needed reorder</span>
-                <a class="link" href="order.html">Go to Orders Page!</a>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">1m ago</p>
-            </div>
-            </div>
-
-            <div class="row single-notification-box unread">
-            <div class="col-11 notification-text">
-                <p>
-                <a href="#" class="link name">NDS-424-DS-1</a>
-                <span class="description">needed reorder</span>
-                <a class="link group" href="order.html">Go to Orders Page!</a>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">1 day ago</p>
-            </div>
-            </div>
-
-            <div class="row single-notification-box read">
-            <div class="col-11 notification-text">
-                <p>
-                <a href="#" class="link name">Rizky Hasanuda</a>
-                <span class="description">sent you a private message</span>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">5 days ago</p>
-                <div class="private-message">
-                Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
-                I'm already having lots of fun and improving my game.
-                </div>
-            </div>
-            </div>
-
-            <div class="row single-notification-box read">
-            <div class="col-10 notification-text comment">
-                <p>
-                <a href="#" class="link name">Kimberly Smita</a>
-                <span class="description">commented on your picture</span>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">1 week ago</p>
-            </div>
-            </div>
-
-            <div class="row single-notification-box read">
-            <div class="col-11 notification-text">
-                <p>
-                <a href="#" class="link name">Nathan Petersa</a>
-                <span class="description">reacted to your recent post</span>
-                <a class="link" href="http://">5 end-game strategies to increase your win rate</a>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">2 weeks ago</p>
-            </div>
-            </div>
-
-            <div class="row single-notification-box read">
-            <div class="col-11 notification-text">
-                <p>
-                <a href="#" class="link name">Anna Kim</a>
-                <span class="description">left the group</span>
-                <a class="link" href="http://">Chess Club</a>
-                <span class="unread-symbol">•</span>
-                </p>
-                <p class="time">2 weeks ago</p>
-            </div>
-            </div>
-
+	</div>
         </div>
         <div class="col-5 mark-as-read text-end">
             <a href="#" id="markAllAsRead" class="mark-as-read-button align-middle">Mark all as read</a>
