--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -2986,6 +2986,56 @@ p {
     margin-bottom: 20px
   }
 
+  .fifolifoContent {
+    width: 250px;
+    height: 270px;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(230, 239, 253);
+    color: #000;
+    text-align: center;
+    border-radius: 20px;
+    padding: 30px 30px 70px;
+    z-index: 3; 
+    position: relative;
+    margin-top: -28.5%;
+    margin-left: 91.5%;
+    display: none;
+  }
+
+  .fifolifoContent button.confirm {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    width: 180px;
+    height: 50px;
+    scale: 0.8;
+    padding: 14px;
+    font-size: 19px;
+    color: rgb(0, 0, 0);
+    box-shadow: 0px 6px 18px -5px rgb(252, 251, 251);
+    align-items: center;
+    margin-top: 2px;
+}
+
+.fifolifoContent button.confirm:hover {
+      background-color: rgb(230, 230, 230); 
+}
+
+  
+.fifolifoContent label {
+  display: block;
+}
+.fifolifoContent input {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 20px 5px;
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+  width: 190px;
+  margin-bottom: 20px
+}
+
   /* custom styles */
   .settingContent2 {
     width: 250px;
