Update sales.html fifo lifo button

--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -71,6 +71,13 @@
           <div class="top_menu">
             <div class="logo"></div>
             <ul>
+	    <li><a href="#" id = "fifolifo">
+                    <i class="material-icons"></i>
+                    <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M511.9935 699.733c-102.4 0-187.733-85.333-187.733-187.733s85.333-187.733 187.733-187.733S699.7265 409.6 699.7265 512s-85.333 187.733-187.733 187.733z m472.177-250.311c-5.689-22.756-22.756-39.822-45.511-45.511l-11.378-5.689c-34.133-11.378-68.267-34.133-91.022-68.267s-22.756-73.956-17.067-113.778l5.689-11.378c5.689-17.067 0-45.511-17.067-62.578 0 0-17.067-11.378-56.889-34.133s-56.889-28.444-56.889-28.444c-22.756-5.689-45.511 0-62.578 17.067l-11.378 11.378c-28.444 22.756-68.267 39.822-108.089 39.822s-79.644-17.067-108.089-39.822l-5.689-17.067c-17.067-11.378-45.511-22.756-62.578-11.378 0 0-17.067 5.689-56.889 28.444s-56.889 34.133-56.889 34.133c-17.067 17.067-28.444 39.822-22.756 62.578l5.689 17.067c11.378 34.133 5.689 73.956-17.067 113.778-22.756 28.444-51.2 51.2-91.022 62.578l-11.378 5.689c-22.756 0-39.822 22.756-45.511 45.511 0 0-5.689 17.067-5.689 62.578s5.689 62.578 5.689 62.578c5.689 22.756 22.756 39.822 45.511 45.511l11.378 5.689c34.133 11.378 68.267 34.133 91.022 68.267s22.756 73.956 17.067 113.778l-5.689 11.378c-5.689 17.067 0 45.511 17.067 62.578 0 0 17.067 11.378 56.889 34.133s56.889 28.444 56.889 28.444c22.756 5.689 45.511 0 62.578-17.067l11.378-11.378c28.444-28.444 62.578-39.822 108.089-39.822 39.822 0 79.644 17.067 108.089 39.822l11.378 11.378c17.067 17.067 39.822 22.756 62.578 17.067 0 0 17.067-5.689 56.889-28.444s56.889-34.133 56.889-34.133 22.756-39.822 17.067-62.578l-5.689-17.067c-11.378-34.133-5.689-73.956 17.067-108.089s51.2-56.889 91.022-68.267l17.067-5.689c22.756-5.689 39.822-22.756 45.511-45.511 0 0 5.689-17.067 5.689-62.578-5.689-45.511-11.378-62.578-11.378-62.578z"  />
+                    </svg>
+            </a></li>
+		    
             <li><a href="#" id = "setting">
                     <i class="material-icons"></i>
                     <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -172,69 +179,24 @@
 
     <script src="../../backend/sales.js"></script>    
 
-    <!-- <div class="container">
-        <div class="cookiesContent" id="cookiesPopup">
-        <span class="arrow"></span>
-        <button class="close">✖</button>
-        <img src="../public/images/mini.png" alt="cookies-img" />
-        <p>We use cookies for improving user experience, analytics and marketing.</p>
-        <button class="accept">That's fine!</button>
-        </div>
-    </div>  -->
-
-    <!-- <div class="container">
-    <div class="modal" id = "modal">
-        <span class="arrow"></span>
-        <div class="modal-header">
-            <div class="modal-logo">
-                <span class="logo-circle">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="419.116" viewBox="0 0 512 419.116">
-                        <defs>
-                            <clipPath id="clip-folder-new">
-                                <rect width="512" height="419.116" />
-                            </clipPath>
-                        </defs>
-                        <g id="folder-new" clip-path="url(#clip-folder-new)">
-                            <path id="Union_1" data-name="Union 1" d="M16.991,419.116A16.989,16.989,0,0,1,0,402.125V16.991A16.989,16.989,0,0,1,16.991,0H146.124a17,17,0,0,1,10.342,3.513L227.217,57.77H437.805A16.989,16.989,0,0,1,454.8,74.761v53.244h40.213A16.992,16.992,0,0,1,511.6,148.657L454.966,405.222a17,17,0,0,1-16.6,13.332H410.053v.562ZM63.06,384.573H424.722L473.86,161.988H112.2Z" fill="var(--c-action-primary)" stroke="" stroke-width="1" />
-                        </g>
-                    </svg>
-                </span>
-            </div>
-            <button class="btn-close">✖
-            </button>
-        </div>
-        <div class="modal-body">
-            <h2 class="modal-title">Upload a file</h2>
-            <p class="modal-description">Attach the file below</p>
-            <button class="upload-area">
-                <span class="upload-area-icon">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="340.531" height="419.116" viewBox="0 0 340.531 419.116">
-      <g id="files-new" clip-path="url(#clip-files-new)">
-        <path id="Union_2" data-name="Union 2" d="M-2904.708-8.885A39.292,39.292,0,0,1-2944-48.177V-388.708A39.292,39.292,0,0,1-2904.708-428h209.558a13.1,13.1,0,0,1,9.3,3.8l78.584,78.584a13.1,13.1,0,0,1,3.8,9.3V-48.177a39.292,39.292,0,0,1-39.292,39.292Zm-13.1-379.823V-48.177a13.1,13.1,0,0,0,13.1,13.1h261.947a13.1,13.1,0,0,0,13.1-13.1V-323.221h-52.39a26.2,26.2,0,0,1-26.194-26.195v-52.39h-196.46A13.1,13.1,0,0,0-2917.805-388.708Zm146.5,241.621a14.269,14.269,0,0,1-7.883-12.758v-19.113h-68.841c-7.869,0-7.87-47.619,0-47.619h68.842v-18.8a14.271,14.271,0,0,1,7.882-12.758,14.239,14.239,0,0,1,14.925,1.354l57.019,42.764c.242.185.328.485.555.671a13.9,13.9,0,0,1,2.751,3.292,14.57,14.57,0,0,1,.984,1.454,14.114,14.114,0,0,1,1.411,5.987,14.006,14.006,0,0,1-1.411,5.973,14.653,14.653,0,0,1-.984,1.468,13.9,13.9,0,0,1-2.751,3.293c-.228.2-.313.485-.555.671l-57.019,42.764a14.26,14.26,0,0,1-8.558,2.847A14.326,14.326,0,0,1-2771.3-147.087Z" transform="translate(2944 428)" fill="var(--c-action-primary)"/>
-      </g>
-    </svg>
-                </span>
-                <span class="upload-area-title">Drag file(s) here to upload.</span>
-                <span class="upload-area-description">
-                    Alternatively, you can select a file by <br/><strong>clicking here</strong>
-                </span>
-            </button>
-        </div>
-        <div class="modal-footer">
-            <button class="btn-secondary">Cancel</button>
-            <button class="btn-primary">Upload File</button>
-        </div>
-    </div>
-</div> -->
-
-
-
 <div class="container">
     <div class="profileContent" id="profilePopup">
     <span class="arrow"></span>
     <img src="../public/images/mini.png" alt="cookies-img" />
     <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>    </div>
-</div>  
+</div>
+
+<div class="container">
+    <div class="fifolifoContent" id="fifolifoPopup">
+      <label for="startdate">lifo
+      </label>
+      <input type="checkbox" id="checkbox_lifo" name="checkbox">
+      <label for="enddate">fifo
+      </label>
+      <input type="checkbox" id="checkbox_fifo" name="checkbox">
+      <button class="confirm">Confirm</button>
+      </div>
+</div> 
 
 <div class="container">
     <div class="container notifications-container shadow" id = "notiPopup">
@@ -412,6 +374,27 @@
         function redirectToLogin() {
             window.location.href = "login.html";
         }
+    });
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const settingButton = document.querySelector("#fifolifo");
+        const settingPopup = document.getElementById("fifolifoPopup");
+    
+        settingButton.addEventListener("click", function(event) {
+          settingPopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsidesettingButton = settingButton.contains(event.target);
+            const clickInsidesettingPopup = settingPopup.contains(event.target);
+  
+            if (!clickInsidesettingButton && !clickInsidesettingPopup) {
+              settingPopup.style.display = "none"; 
+            }
+        });
+  
     });
 </script>
 
