--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -12,7 +12,7 @@
         <ul class="navbar-items flexbox-col">
           <li class="navbar-logo flexbox-left">
             <a class="navbar-item-inner flexbox">
-                <img src="../public/images/mini.png" id="LogoMenu" data-name="Layer 1" viewBox="0 0 1438.88 1819.54" />
+                <img src="../public/images/minilogo.png" id="LogoMenu" data-name="Layer 1" viewBox="0 0 1438.88 1819.54" />
               <!-- <span class="link-text1">Electrix!</span> -->
             </a>
           </li>
