--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -3235,12 +3235,13 @@ p {
     box-shadow: 0px 0px 22px -8px #808080;
   }
 
-  .right .graph2 img {
+  .right .graph2 .responsive-table {
     position: absolute;
-    margin-top: 10px;
-    margin-left: -240px;
+    margin-top: -110px;
+    margin-left: 10px;
     width: 310px;
-    height: 280px;
+    height: 290px;
+    overflow-y: hidden;
   }
 
   .right .graph3 {
@@ -3253,12 +3254,13 @@ p {
     box-shadow: 0px 0px 22px -8px #808080;
   }
 
-  .right .graph3 img {
+  .right .graph3 .responsive-table {
     position: absolute;
-    margin-top: 10px;
-    margin-left: -240px;
+    margin-top: -110px;
+    margin-left: 10px;
     width: 880px;
     height: 330px;
+    overflow-y: hidden; 
   }
   
   .right .graph + .graph3{
