--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -125,8 +125,76 @@
         <div class="main_container"></div>
     </div>
 
-    <div class = "table4">
-        <h2><small>Performance Report</small><br><small> FY 2024, Q1</small></h2>
+    <div class="center2">
+      <div class="right">
+        <div class="title">Performance Report <br> FY 2024, Q1</div>
+        <div class="description"></div>
+        <div class="row">
+          <div class="half">
+            <div class="sub-title"><strong>Primary Revenue Drivers</strong></div>
+          <div class="graph4">
+            <svg viewBox="0 0 250 60" width="250" height="90">
+              <path d="M 209.328 17.34 C 221.956 17.588 235.264 32.599 250 22.328" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="rgb(243,243,250)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+              <path d=" M 0 43.634 C 5.934 43.634 11.318 51.209 17.462 51.342 C 33.219 51.683 30.603 59.567 39.187 59.868 C 46.963 60.141 50.44 44.192 60.537 43.77 C 69.126 43.77 72.129 52.461 79.739 52.433 C 90.904 52.433 94.93 38.455 106.648 39.78 C 129.082 42.317 124.556 27.606 139.157 27.177 C 153.758 26.747 158.235 44.485 171.96 44.725 C 196.438 45.155 189.782 17.1 208.248 17.1" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="url(#_lgradient_1)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+            </svg>
+            <img id="PRD" src= "../public/images/mini.png" />
+          </div>
+        </div>
+        <div class="half">
+          <div class="sub-title"><strong>KPIs</strong></div>
+          <div class="graph5">
+            <svg viewBox="0 0 250 60" width="250" height="90">
+              <path d="M 209.328 17.34 C 221.956 17.588 235.264 32.599 250 22.328" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="rgb(243,243,250)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+              <path d=" M 0 43.634 C 5.934 43.634 11.318 51.209 17.462 51.342 C 33.219 51.683 30.603 59.567 39.187 59.868 C 46.963 60.141 50.44 44.192 60.537 43.77 C 69.126 43.77 72.129 52.461 79.739 52.433 C 90.904 52.433 94.93 38.455 106.648 39.78 C 129.082 42.317 124.556 27.606 139.157 27.177 C 153.758 26.747 158.235 44.485 171.96 44.725 C 196.438 45.155 189.782 17.1 208.248 17.1" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="url(#_lgradient_1)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+            </svg>
+            <ul class="responsive-table">
+              <li class="table-header">
+                  <div class="col col-1">Type</div>
+                  <div class="col col-2">Data</div>
+              </li>
+              <ul class="responsive-row" id="kpi_dash">
+                <li class="table-row">
+                  <div class="col col-1" data-label="revenue">revenue</div>
+                  <div class="col col-2" data-label="data_revenue" id="revenue_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="gross">gross</div>
+                  <div class="col col-2" data-label="data_gross" id="gross_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="cogs">cogs</div>
+                  <div class="col col-2" data-label="data_cogs" id="cogs_dasg"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="ITR">Inventory Turnover Ratio</div>
+                  <div class="col col-2" data-label="data_ITR" id="ITR_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="average_inventory">average inventory</div>
+                  <div class="col col-2" data-label="data_avg_inventory" id="average_inventory_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="expected_inventory">expected inventory</div>
+                  <div class="col col-2" data-label="data_expected_inventory" id="expected_inventory_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="actual_inventory">actual inventory</div>
+                  <div class="col col-2" data-label="data_actual_inventory" id="actual_inventory_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="shrinkage">shrinkage</div>
+                  <div class="col col-2" data-label="data_shrinkage" id="shrinkage_dash"></div>
+                </li>
+                <li class="table-row">
+                  <div class="col col-1" data-label="shrinkage_percent">shrinkage_percent</div>
+                  <div class="col col-2" data-label="data_shrinkage_percent" id="shrinkage_percent_dash"></div>
+                </li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
 
     <div class ="frame4">
