Update dashboard.html add gross profit in kpi

--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -242,6 +242,10 @@
               <div class="col col-2" data-label="data_ITR" id="ITR_dash"></div>
             </li>
             <li class="table-row">
+              <div class="col col-1" data-label="gross_profit">gross profit</div>
+              <div class="col col-2" data-label="data_gross_profit" id="gross_profit_dash"></div>
+            </li>
+            <li class="table-row">
               <div class="col col-1" data-label="average_inventory">average inventory</div>
               <div class="col col-2" data-label="data_avg_inventory" id="average_inventory_dash"></div>
             </li>
