changed sales.js and orders.js and html pages for getting input for adding

--- a/src/source/views/orders.html
+++ b/src/source/views/orders.html
@@ -236,20 +236,34 @@
             <h1>Product Details</h1>
             <div class="set">
                 <div class="SKU">
-                    <label id="SKU">SKU</label>
+                    <label id=>Ordered date</label>
+                    <input id="Date_order" type="text" placeholder="YYYY-MM-DD">
+                </div>
+            </div>
+
+            <div class="set">
+                <div class="SKU">
+                    <label id=>Unit price</label>
+                    <input id="Price" type="text" placeholder="$...">
+                </div>
+            </div>
+
+            <div class="set">
+                <div class="SKU">
+                    <label id=>SKU</label>
                     <input id="SKU" type="text" placeholder="SKU">
                 </div>
             </div>
             <div class="set">
                 <div class="Name">
-                    <label id="Name">Name</label>
+                    <label id=>Name</label>
                     <input id="Name" type="text" placeholder="Name">
                 </div>
             </div>
             <div class="set">
                 <div class="Amount">
-                    <label id="Amount">Amount</label>
-                    <input id="Amount" type="text" placeholder="Amount">
+                    <label id=>Quantity</label>
+                    <input id="Amount" type="text" placeholder="quantity of items ordered.">
                 </div>
             </div>
 
@@ -265,8 +279,9 @@
 
 
 
-</div>
+    </div>
 
+</div>
 
 
 </body>
