--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -233,20 +233,36 @@
             <h1>Product Details</h1>
             <div class="set">
                 <div class="SKU">
-                    <label id="SKU">SKU</label>
+                    <label>Date of sale</label>
+                    <input id="date_sale" type="text" placeholder="YYYY-MM-DD">
+                </div>
+            </div>
+
+            <div class="set">
+                <div class="SKU">
+                    <label >SKU</label>
                     <input id="SKU" type="text" placeholder="SKU">
                 </div>
             </div>
+
             <div class="set">
                 <div class="Name">
-                    <label id="Name">Name</label>
-                    <input id="Name" type="text" placeholder="Name">
+                    <label id=>Name</label>
+                    <input id="Name" type="text" placeholder="Name of the product">
                 </div>
             </div>
+
+            <div class="set">
+                <div class="Name">
+                    <label id=>Unit price</label>
+                    <input id="price" type="text" placeholder="$...">
+                </div>
+            </div>
+
             <div class="set">
                 <div class="Amount">
-                    <label id="Amount">Amount</label>
-                    <input id="Amount" type="text" placeholder="Amount">
+                    <label id=>Quantity</label>
+                    <input id="Amount" type="text" placeholder="quantity of items sold">
                 </div>
             </div>
             
