--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -565,6 +565,60 @@ usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
 </script>
 
+<script>
+document.getElementById('settingPopup').addEventListener('click', (event) => {
+    event.preventDefault();
+    const start = document.getElementById('startdate').value;
+    const end = document.getElementById('enddate').value;
+    const message = "change fiscal year";
+    var username = localStorage.getItem('username');
+    ipcRenderer.send('send date', {end,username,message});
+    // or set date in local storage and send them along with other info for function we need
+    localStorage.setItem('start', start);
+    localStorage.setItem('end', end); 
+  });
+</script>
+
+<script>
+document.getElementById('fifolifoPopup').addEventListener('click', (event) => {
+    event.preventDefault();
+    const fifo = document.getElementById('fifo');
+    const lifo = document.getElementById('lifo');
+    var username = localStorage.getItem('username');
+    const message = "change lifo fifo";
+    if(lifo.checked == true && fifo.checked == true){
+        alert("choose one of two options");
+    }else if(lifo.checked == false && fifo.checked == false){
+        alert("choose one");
+    }else{
+        const status = lifo.checked ? "lifo": "fifo" ;
+        ipcRenderer.send('change lifo fifo', {status,username,message});
+        localStorage.setItem('lifo-fifo', status);
+    }
+  });
+</script>
+
+<script>
+    const {ipcRenderer} = require("electron");
+
+    function addHTMLNoti(data) {
+    var notibar = document.getElementById('notiPopup');
+
+    // return produt name from back end
+    const noti = data.response;
+    
+    notibar.innerHTML += "<div class=\"row single-notification-box unread\"><div class=\"col-11 notification-text\"><p>"
+    + noti+
+    + "<a class=\"link\" href=\"order.html\">Go to Orders Page!</a><span class=\"unread-symbol\">•</span> </p>"
+    + "<p class=\"time\">1m ago</p></div> </div>";
+}
+
+    ipcRenderer.on('get noti', (event, data) => {
+        const our_data = data.response;
+        addHTMLNoti(our_data);
+    });
+</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
