--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -153,16 +153,14 @@
             </div>
         </div>
 
-    <div id="main_container" class="main_container">
+        <div id="main_container" class="main_container">
         <table id="data-table">
             <thead>
                 <tr>
                     <th>SKU</th>
                     <th>Name</th>
-		            <th>Number in stock</th>
-                    <th>Number on order</th>
-                    <th>Unit cost</th>
-                    <th>Inventory value</th>
+		            <th>Quantity</th>
+                    <th>Price</th>
                 </tr>
             </thead>
             <tbody id="table-body">
