--- a/src/source/views/orders.html
+++ b/src/source/views/orders.html
@@ -164,12 +164,12 @@
         <table id="data-table">
             <thead>
                 <tr>
-                    <th>Date Order Placed</th>
-                    <th>Expected Arrival Date</th>
+                    <th>Date</th>
 		            <th>SKU</th>
                     <th>Name</th>
                     <th>Price</th>
                     <th>Quantity</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody id="table-body">
