--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -235,7 +235,7 @@
             </li>
             <li class="table-row">
               <div class="col col-1" data-label="cogs">cogs</div>
-              <div class="col col-2" data-label="data_cogs" id="cogs_dasg"></div>
+              <div class="col col-2" data-label="data_cogs" id="cogs_dash"></div>
             </li>
             <li class="table-row">
               <div class="col col-1" data-label="ITR">Inventory Turnover Ratio</div>
