--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -295,10 +295,11 @@
 </div>
 
 <div class="container">
-  <div class="profileContent2" id="profilePopup">
+  <div class="profileContent" id="profilePopup">
   <span class="arrow"></span>
   <img src="../public/images/mini.png" alt="cookies-img" />
-    <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>  <button class="accept">Log out</button>
+  <p  id='usernamehere'><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br><br></p>
+  <button class="accept">Log out</button>
   </div>
 </div>
 
@@ -552,7 +553,7 @@
 
 <script> 
 var username = localStorage.getItem('username');
-var usernamehere = document.getElementByID("usernamehere");
+var usernamehere = document.getElementById("usernamehere");
 usernamehere.innerHTML = ""
 usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
