--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -160,6 +160,7 @@
                     <th>SKU</th>
                     <th>Name</th>
 		            <th>Quantity</th>
+                    <th>Price</th>
                 </tr>
             </thead>
             <tbody id="table-body">
