--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -501,7 +501,7 @@
 
 <script> 
 var username = localStorage.getItem('username');
-var usernamehere = document.getElementByID("usernamehere");
+var usernamehere = document.getElementById("usernamehere");
 usernamehere.innerHTML = ""
 usernamehere.innerHTML += localStorage.getItem('username');
 // Use the username as needed
