revived the column deleted previously

--- a/src/source/views/orders.html
+++ b/src/source/views/orders.html
@@ -167,6 +167,7 @@
                     <th>Date</th>
 		            <th>SKU</th>
                     <th>Name</th>
+                    <th>Price</th>
                     <th>Quantity</th>
                     <th>Status</th>
                 </tr>
